<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CinemaStream</string>
    
    <!-- Main Menu -->
    <string name="movies">Movies</string>
    <string name="tv_shows">TV Shows</string>
    <string name="live_tv">Live TV</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    
    <!-- Movie Categories -->
    <string name="action">Action</string>
    <string name="comedy">Comedy</string>
    <string name="drama">Drama</string>
    <string name="horror">Horror</string>
    <string name="romance">Romance</string>
    <string name="sci_fi">Sci-Fi</string>
    <string name="thriller">Thriller</string>
    <string name="documentary">Documentary</string>
    <string name="animation">Animation</string>
    <string name="adventure">Adventure</string>
    
    <!-- Player Controls -->
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="forward">Forward</string>
    <string name="rewind">Rewind</string>
    <string name="fullscreen">Fullscreen</string>
    <string name="subtitles">Subtitles</string>
    <string name="audio_tracks">Audio Tracks</string>
    <string name="quality">Quality</string>
    
    <!-- Quality Options -->
    <string name="quality_auto">Auto</string>
    <string name="quality_720p">720p</string>
    <string name="quality_1080p">1080p</string>
    <string name="quality_4k">4K</string>
    
    <!-- General -->
    <string name="loading">Loading...</string>
    <string name="error">Error</string>
    <string name="retry">Retry</string>
    <string name="no_internet">No internet connection</string>
    <string name="back">Back</string>
    <string name="close">Close</string>
    <string name="download">Download</string>
    <string name="share">Share</string>
    <string name="favorite">Favorite</string>
    
    <!-- Movie Details -->
    <string name="plot">Plot</string>
    <string name="cast">Cast</string>
    <string name="director">Director</string>
    <string name="year">Year</string>
    <string name="rating">Rating</string>
    <string name="duration">Duration</string>
    <string name="watch_now">Watch Now</string>
    <string name="watch_trailer">Watch Trailer</string>
    
    <!-- Live TV -->
    <string name="news">News</string>
    <string name="sports">Sports</string>
    <string name="entertainment">Entertainment</string>
    <string name="kids">Kids</string>
    <string name="music">Music</string>
    
    <!-- Settings -->
    <string name="language">Language</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="default_quality">Default Quality</string>
    <string name="autoplay_next">Autoplay Next Episode</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="about">About</string>
    <string name="version">Version</string>
    
    <!-- Search -->
    <string name="search_hint">Search movies, TV shows...</string>
    <string name="no_results">No results found</string>
    <string name="recent_searches">Recent Searches</string>
    
    <!-- Episodes -->
    <string name="season">Season</string>
    <string name="episode">Episode</string>
    <string name="episodes">Episodes</string>
    <string name="next_episode">Next Episode</string>
    <string name="previous_episode">Previous Episode</string>
</resources>